⚡️ common component, modal component 추가

--- a/src/styles/mixin/_modal.module.scss
+++ b/src/styles/mixin/_modal.module.scss
@@ -3,8 +3,10 @@
   @include pos-center(absolute);
   z-index: 2;
   flex-direction: column;
-  width: 330px;
+  width: 663px;
+  height: 675px;
   background-color: $white;
+  border-radius: 30px;
 }
 
 %modal-background {
@@ -13,6 +15,6 @@
   top: 0;
   left: 50%;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.35);
+  background-color: rgba(196, 196, 196, 0.5);
   transform: translateX(-50%);
 }
