--- a/src/styles/constants/_colors.module.scss
+++ b/src/styles/constants/_colors.module.scss
@@ -1,7 +1,9 @@
 $main: #ffa243;
+$strong_orange: #fd7d35;
 $text: #2c343f;
 $grey: #737373;
 $light_grey: #c4c4c4;
 $yellow: #ffc90a;
 $light_yellow: #ffe589;
 $white: #fff;
+$blue: #4987ff;
