--- a/src/components/modals/modals.module.scss
+++ b/src/components/modals/modals.module.scss
@@ -73,3 +73,76 @@
     margin: 127px 0 17px;
   }
 }
+
+.pointChargeModal {
+  h1 {
+    @include text(32px, $text, 700);
+    display: block;
+    margin: 30px 0 80px;
+  }
+
+  input {
+    @include text(32px, $text, 500, left);
+    width: 421px;
+    height: 73px;
+    padding: 10px;
+    margin-bottom: 37px;
+    border: 1px solid $text;
+    border-radius: 10px;
+    outline: none;
+  }
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+.pointChargeCompleteModal {
+  h1 {
+    @include text(32px, $text, 700);
+    margin: 65px 0;
+  }
+}
+
+.askModal {
+  input {
+    @include text(32px, $text, 500, left);
+    width: 573px;
+    height: 58px;
+    padding: 10px 20px;
+    margin: 32px 0 23px;
+    border: 1px solid $text;
+    border-radius: 10px;
+    outline: none;
+  }
+
+  textarea {
+    width: 573px;
+    height: 286px;
+    padding: 10px 18px;
+    margin-bottom: 26px;
+    border: 1px solid $text;
+    border-radius: 10px;
+    resize: none;
+  }
+
+  input::placeholder,
+  textarea::placeholder {
+    @include text(24px, $light_grey, 500, left);
+  }
+}
+
+.askCompleteModal {
+  h1 {
+    @include text(32px, $text, 700);
+    margin: 54px 0 59px;
+  }
+
+  span {
+    @include text(32px, $text, 500);
+    display: block;
+    margin-bottom: 78px;
+  }
+}
