--- a/src/components/common/productBlock.css
+++ b/src/components/common/productBlock.css
@@ -5,6 +5,7 @@
   box-shadow: 0px 12px 40px rgba(0, 19, 37, 0.1);
   margin-left: 30px;
   margin-right: 30px;
+  position: relative;
 }
 .productBlock .alreadySell {
   position: absolute;
