--- a/src/components/layout/sidebar.css
+++ b/src/components/layout/sidebar.css
@@ -30,10 +30,12 @@
   background: #fff;
 }
 
-.wholesidebar .sidebar .typologo {
+.wholesidebar .sidebar .logoPart {
+  width: 348px;
+  height: 86px;
   align-self: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .wholesidebar .sidebar .cates {
@@ -57,7 +59,7 @@
   font-size: 26px;
   font-weight: 700;
   font-family: "Font";
-  margin-bottom: 6px;
+  margin-bottom: 3px;
   cursor: default;
 }
 .wholesidebar .sidebar .smallcate {
