--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,7 +6,7 @@
 }
 .homeTitle {
   display: flex;
-  width: 80%;
+  width: 1340px;
   align-items: flex-end;
 }
 
@@ -25,6 +25,8 @@
 }
 .productOneLine {
   display: flex;
+  width: 1390px;
   margin-top: 25px;
   margin-bottom: 25px;
+  justify-content: flex-start;
 }
