--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -7,3 +7,4 @@
 @import "./mixin/basicPage.module.scss";
 @import "./mixin/_modal.module.scss";
 @import "./mixin/tag.module.scss";
+@import "./mixin/productCard.module.scss";
