⚡️ 마이페이지 내 정보 수정 완료

--- a/src/components/common/common.module.scss
+++ b/src/components/common/common.module.scss
@@ -7,7 +7,7 @@
 }
 
 .greyBtn {
-  @include btn-with-text($light_grey, $main, 36px);
+  @include btn-with-text($light_grey, $white, 36px);
   width: 400px;
   height: 86px;
 }
