:zap: 로그인, 회원가입, 탈퇴 validation추가 밑 type변경

--- a/src/pages/auth/signup.css
+++ b/src/pages/auth/signup.css
@@ -14,9 +14,16 @@
 .signup .inputSet {
   display: flex;
   flex-direction: column;
-  height: 544px;
+  height: 500px;
   justify-content: space-between;
-  margin-bottom: 50px;
+}
+
+.signup .errmsg {
+  font-family: "Font";
+  font-weight: 500;
+  font-size: 18px;
+  color: #ffa243;
+  padding: 10px;
 }
 
 .signup .btntrue {
