--- a/src/components/common/productBlock.css
+++ b/src/components/common/productBlock.css
@@ -3,8 +3,7 @@
   height: 323px;
   border-radius: 10px;
   box-shadow: 0px 12px 40px rgba(0, 19, 37, 0.1);
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 30px;
   position: relative;
 }
 .productBlock .alreadySell {
