--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -5,13 +5,36 @@
   .topBar {
     @include flexBox(between, center);
     padding: 0 50px;
+    position: relative;
 
     .topBarBtn {
       @extend %btn-base;
+      align-self: center;
+      z-index: 30;
     }
   }
 
   .contentLayout {
     padding: 30px 80px 60px;
+  }
+
+  .search {
+    @include flexBox(end);
+    position: absolute;
+    left: 1620px;
+    width: 328px;
+    height: 90px;
+    border: 5px solid #ffe589;
+    border-radius: 50px;
+    padding: 15px;
+
+    .text {
+      @include text(18px, $text, 500, left);
+      font-family: "Font";
+      width: 100%;
+      height: 100%;
+      border: 0px;
+      outline: none;
+    }
   }
 }
