--- a/src/components/layout/sidebar.css
+++ b/src/components/layout/sidebar.css
@@ -22,12 +22,12 @@
   overflow-y: scroll;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 30px;
-  background: #fff;
+  background: #ffe589;
 }
 
 .wholesidebar .sidebar .logoPart {
