⚡️ 페이지 라우터 추가

--- a/src/components/mypage/mypage.module.scss
+++ b/src/components/mypage/mypage.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   width: 425px;
   height: 271px;
+  text-decoration: none;
   cursor: pointer;
   background: $white;
   border: 0;
