:zap: 회원가입 구현 완료, 사이드바 변경

--- a/src/components/layout/sidebar.css
+++ b/src/components/layout/sidebar.css
@@ -50,9 +50,14 @@
   font-size: 26px;
   font-weight: 700;
   font-family: "Font";
+  text-align: left;
   margin-bottom: 6px;
   cursor: pointer;
   text-decoration: none;
+  background-color: transparent;
+  border: 0px;
+  outline: none;
+  padding: 0px;
 }
 .wholesidebar .sidebar .bigcate2 {
   color: #893100;
