--- a/src/components/common/productBlock.css
+++ b/src/components/common/productBlock.css
@@ -5,6 +5,7 @@
   box-shadow: 0px 12px 40px rgba(0, 19, 37, 0.1);
   margin: 30px;
   position: relative;
+  text-decoration: none;
 }
 .productBlock .alreadySell {
   position: absolute;
