⚡️ 게시글 등록 예외처리 + jwt verify 오류 수정

--- a/src/pages/productRegister.module.scss
+++ b/src/pages/productRegister.module.scss
@@ -3,6 +3,11 @@
   @include flexBox(even, center);
   flex-direction: column;
 
+  .errMsg {
+    @include text(24px, $main, 700);
+    margin-bottom: 20px;
+  }
+
   .putInfos {
     @include flexBox(even, start);
     width: 100%;
