--- a/src/components/common/productBlock.css
+++ b/src/components/common/productBlock.css
@@ -39,6 +39,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0.7;
 }
 .productBlock .imgPart .heart .heartIcon {
   margin-right: 6px;
