--- a/src/components/modals/modals.module.scss
+++ b/src/components/modals/modals.module.scss
@@ -17,12 +17,24 @@
     margin: 18px 0 33px;
     border: 0;
     border-radius: 10px;
+    outline: none;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     resize: none;
   }
 
   textarea::placeholder {
     @include text(18px, $light_grey, 500, left);
+  }
+
+  input {
+    width: 493px;
+    height: 48px;
+    padding: 7px 18px;
+    margin: 18px 0 0;
+    border: 0;
+    border-radius: 10px;
+    outline: none;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
