--- a/src/pages/mypage/list.module.scss
+++ b/src/pages/mypage/list.module.scss
@@ -22,11 +22,13 @@
   }
 
   .lists {
-    @include flexBox(between, center);
+    @include flexBox(center, start);
+    width: 1283px;
 
     .card {
       @include flexBox(center, start);
       flex-direction: column;
+      margin-right: 45px;
 
       .date {
         @include text(24px, $text, 400, left);
