--- a/src/components/admin/board.module.scss
+++ b/src/components/admin/board.module.scss
@@ -3,10 +3,17 @@
   @include flexBox(between, center);
   width: 1313px;
   height: 60px;
+  text-align: center;
   border-bottom: 1px solid $grey;
 
   span {
-    width: 20%;
+    @include text(24px, $text, 400);
     text-align: center;
+  }
+
+  .deleteBtn {
+    @include btn-with-text($light_yellow, $text, 69px, 40px);
+    @include text(24px, $text, 400);
+    border-radius: 10px;
   }
 }
