--- a/src/components/modals/modals.module.scss
+++ b/src/components/modals/modals.module.scss
@@ -1,4 +1,17 @@
 @import "../../styles/main.module.scss";
+.adminReportModal {
+  @include flexBox;
+  flex-direction: column;
+
+  h1 {
+    @include text(36px, $text, 700);
+  }
+
+  .title {
+    margin-bottom: 45px;
+  }
+}
+
 .reportModal {
   h1 {
     @include text(30px, $text, 700);
