--- a/src/pages/admin/manageDetail.module.scss
+++ b/src/pages/admin/manageDetail.module.scss
@@ -37,8 +37,21 @@
         @include text(36px, $text, 400);
       }
 
+      input {
+        @include text(36px, $text, 400);
+        outline: none;
+        border: none;
+        text-align: left;
+        width: 100%;
+      }
+
       span {
         @include text(24px, $text, 400);
+      }
+
+      .right {
+        @include flexBox(between, right);
+        width: 400px;
       }
     }
 
@@ -49,9 +62,20 @@
       background-color: $light_grey;
     }
 
+    textarea {
+      @include text(24px, $text, 400);
+      width: 100%;
+      height: 100%;
+      outline: none;
+      border: none;
+      text-align: left;
+      overflow-y: scroll;
+    }
+
     p {
       @include text(24px, $text, 400, left);
       overflow-y: scroll;
+      white-space: pre-line;
     }
   }
 
