--- a/src/components/mypage/mypage.module.scss
+++ b/src/components/mypage/mypage.module.scss
@@ -74,7 +74,8 @@
 }
 
 .contents {
-  width: 100%;
+  align-self: flex-end;
+  width: 90%;
   margin-bottom: 50px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
