--- a/src/pages/admin/manageDetail.module.scss
+++ b/src/pages/admin/manageDetail.module.scss
@@ -9,6 +9,49 @@
     margin-bottom: 43px;
   }
 
+  .question {
+    width: 100%;
+    padding: 27px 50px;
+    margin-bottom: 30px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+    .topLine {
+      @include flexBox(between, center);
+
+      h1 {
+        @include text(36px, $text, 400, left);
+      }
+
+      span {
+        @include text(24px, $text, 400, left);
+      }
+    }
+
+    .line {
+      width: 100%;
+      height: 1px;
+      margin: 27px 0;
+      background-color: $light_grey;
+    }
+
+    p {
+      @include text(24px, $text, 400, left);
+    }
+  }
+
+  .answer {
+    @include text(24px, $text, 400, left);
+    align-self: flex-end;
+    width: 90%;
+    height: 250px;
+    padding: 27px;
+    margin-bottom: 50px;
+    border: 0;
+    outline: none;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    resize: none;
+  }
+
   .stopped {
     @include flexBox;
     flex-direction: column;
