--- a/src/components/modals/modals.module.scss
+++ b/src/components/modals/modals.module.scss
@@ -219,3 +219,50 @@
     margin-bottom: 40px;
   }
 }
+
+.reviewModal {
+  h1 {
+    @include text(36px, $text, 700);
+  }
+
+  .star {
+    position: relative;
+    margin-bottom: 30px;
+    font-size: 80px;
+    color: $light_grey;
+  }
+
+  .star input {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    opacity: 0;
+  }
+
+  .star span {
+    position: absolute;
+    left: 0;
+    width: 0;
+    overflow: hidden;
+    color: $main;
+    pointer-events: none;
+  }
+
+  .reviewText {
+    @include text(24px, $text, 500, left);
+    width: 550px;
+    height: 250px;
+    padding: 10px 18px;
+    margin-bottom: 26px;
+    border: 1px solid $text;
+    border-radius: 10px;
+    outline: none;
+    resize: none;
+  }
+
+  textarea::placeholder {
+    @include text(24px, $light_grey, 500, left);
+  }
+}
